# curvy

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  to_svg.rs
src/geometry/: angle.rs  arc.rs  base.rs  delta.rs  error.rs  intersects.rs  line.rs  mod.rs  offset.rs  point.rs  poly.rs
src/tests/: mod.rs  test_arc.rs  test_line.rs  test_poly.rs  test_svg.rs
