[package]
name = "curvy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.0"
decorum = "0.3.1"
derive_more = "0.99.16"
more-asserts = "0.2.2"
num-traits = "0.2.14"
thiserror = "1.0.30"
svg = "0.10.0"
